src/acid/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app-ingress-prd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: portfolio-app-prd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app-service-prd
                port:
                  number: 8080
